# museper

./: README.md  main.py  pyproject.toml
src/museper/: download_model.py  inference.py  utils.py
src/museper/models/bandit/core/: __init__.py
src/museper/models/bs_roformer/: attend.py  bs_roformer.py  mel_band_roformer.py
